--- a/src/pages/guidelines/typography/experiences.mdx
+++ b/src/pages/guidelines/typography/experiences.mdx
@@ -16,6 +16,14 @@ expressive experiences.
 
 </PageDescription>
 
+<InlineNotification>
+
+The Expressive theme has been integrated into the Carbon Design System's core
+library, and both the productive and expressive type sets are now available
+within the one [Sketch kit](/designing/design-kits/).
+
+</InlineNotification>
+
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>
