--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -16,10 +16,18 @@ products and IBM.com website pages.
 
 </PageDescription>
 
+<InlineNotification>
+
+The Expressive theme has been integrated into the Carbon Design System's core
+library, and both the productive and expressive type sets are now available
+within the one [Sketch kit](/designing/design-kits/).
+
+</InlineNotification>
+
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>
-<AnchorLink>Key differences</AnchorLink>
+<AnchorLink>Differences between type sets</AnchorLink>
 <AnchorLink>The type sets</AnchorLink>
 <AnchorLink>Questions</AnchorLink>
 
@@ -27,10 +35,10 @@ products and IBM.com website pages.
 
 ## Overview
 
-The type sets here support designers creating `expressive` and `productive`
+The two IBM type sets support designers creating `expressive` and `productive`
 experiences within IBM products and [IBM.com](http://ibm.com) website pages.
 
-## Key differences
+## Differences between type sets
 
 #### Base type sizes
 
@@ -39,25 +47,27 @@ experiences use a base type size of 16px.
 
 \*\*insert image of the two types with arrow removed
 
-### Style naming conventions
+#### Style naming conventions
 
 Within `Body styles` and `Supporting styles`, the same set of styles are
 offered. Productive styles are named with a suffix of `-01` and expressive style
-names have an `-02` suffix.
+names have a suffix of `-02`.
 
-### Headings behave differently
+#### Two heading sets
 
 There are two heading type sets, one Productive and one Expressive. The major
 difference between the type sets is seen in how they are implemented.
 
-Expressive uses a fluid type set for headings. Breakpoints are set in the code
-so that the type adjusts smoothly as it moves between breakpoints.
+- Expressive uses a fluid type set for headings. Breakpoints are set in the code
+  so that the type adjusts smoothly as it moves between breakpoints.
 
-Productive uses fixed headings. In the product space, users are generally
-embedded within one area that has multiple containers and denser content, and
-therefore headings in the productive type set are fixed.
+- Productive uses fixed headings. In the product space, users are generally
+  embedded within one area that has multiple containers and denser content, and
+  therefore headings in the productive type set are fixed.
 
---> insert table
+## The type sets
+
+--> insert new table component here
 
 ## Questions?
 
