--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -1,18 +1,18 @@
 ---
 label:
-  The two IBM type sets support designers creating experiences for both IBM
-  products and IBM.com website pages..
+  Our two type sets support designers creating experiences for both IBM products
+  and IBM.com website pages..
 title: Typography
 description:
-  The two IBM type sets support designers creating experiences for both IBM
-  products and IBM.com website pages.
+  Our two type sets support designers creating experiences for both IBM products
+  and IBM.com website pages.
 tabs: ['Overview', 'Experiences', 'Type sets', 'Code']
 ---
 
 <PageDescription>
 
-The two IBM type sets support designers creating experiences for both IBM
-products and IBM.com website pages.
+Our two type sets support designers creating experiences for both IBM products
+and IBM.com website pages.
 
 </PageDescription>
 
