--- a/src/pages/components/search/style.mdx
+++ b/src/pages/components/search/style.mdx
@@ -66,12 +66,12 @@ content.
 | `.bx--search--lg`                                 | padding-left, padding-right | 48 / 3   | `$spacing-09` |
 | `.bx--search--sm`                                 | padding-left, padding-right | 32 / 2   | `$spacing-07` |
 
-## Size
+### Sizes
 
 The width of the search field should appropriately fit the design and layout of
 content.
 
-|Element     | Sizes                                | Height (px / rem)                   | 
+|Element     | Size                                | Height (px / rem)                   | 
 | -----------| ------------------------------------ | ----------------------------------- | 
 |Input       | Small (sm)                           | 32 / 2                              |    
 |            | Medium (md)                          | 40 / 2.5                            |
