--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -238,6 +238,17 @@ appropriate chart type.
 </OverviewCard>
 </Column>
 
+<Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm>
+ <OverviewCard
+    title="Circle pack"
+    href="/data-visualization/complex-charts#circle-packs"
+    >
+
+![GATSBY_EMPTY_ALT](images/circle-pack.svg)
+
+</OverviewCard>
+</Column>
+
 </Row>
 
 ## Correlations
