fix: token names, image assets

--- a/src/pages/patterns/status-indicator-pattern/index.mdx
+++ b/src/pages/patterns/status-indicator-pattern/index.mdx
@@ -313,12 +313,12 @@ is good practice to clarify the status intention in the text label.
 <DoDontRow>
   <DoDont caption="Do left align icons and type in lists and data tables, regardless of whether you’re using the responsive grid or spacers." colLg={6}>
 
-![Aligned status indicator icons.](images/status_indicator_5.png)
+![Aligned status indicator icons.](images/status_indicator_5.jpg)
 
   </DoDont>
   <DoDont type="dont" colLg={6} caption="Do not push icons out of alignment with label length. In this case, where the status indicators are flush right, the two digit labels are pushing the icons out of alignment.">
 
-![Misaligned status indicator icons](images/status_indicator_6.png)
+![Misaligned status indicator icons](images/status_indicator_6.jpg)
 
   </DoDont>
 </DoDontRow>
@@ -348,6 +348,10 @@ launch a modal, pane, or flyout.
 Numbers are used in conjunction with a badge status when a count of new or
 updated items is available and it's important for the user to know the number of
 updates.
+
+Badge status numbers can only be used in conjunction with the large icon button
+because with anything smaller, the icon gets covered. In very rare cases badge
+number may exceed two digits.
 
 #### Badge status without number
 
