fix: add number badge image

--- a/src/pages/patterns/status-indicator-pattern/index.mdx
+++ b/src/pages/patterns/status-indicator-pattern/index.mdx
@@ -353,6 +353,8 @@ Badge status numbers can only be used in conjunction with the large icon button
 because with anything smaller, the icon gets covered. In very rare cases badge
 number may exceed two digits.
 
+![Four icons with badges that included numbers ranging from one to three digits. The last badge has a plus.]()
+
 #### Badge status without number
 
 A badge indicator with no number is used when a new notification is available
