docs: Accordion size image update for V11

--- a/src/pages/components/accordion/style.mdx
+++ b/src/pages/components/accordion/style.mdx
@@ -106,3 +106,9 @@ of the accordion panel.
 | Header  | Small (sm)  | 32 / 2          |
 |         | Medium (md) | 40 / 2.5        |
 |         | Large (lg)  | 48 / 3          |
+
+<div className="image--fixed">
+
+![Sizes for accordion](images/accordion-style-size.png)
+
+</div>
