docs: Content switcher size image update for V11

--- a/src/pages/components/content-switcher/style.mdx
+++ b/src/pages/components/content-switcher/style.mdx
@@ -68,10 +68,10 @@ plus the 16 px / 1rem on both sides of the text.
 
 ## Sizes
 
-| Size        | Height px / rem | 
-| ------------|---------------- |
-| Small (sm)  | 32 / 2          | 
-| Medium (md) | 40 / 2.5        | 
+| Size        | Height px / rem |
+| ----------- | --------------- |
+| Small (sm)  | 32 / 2          |
+| Medium (md) | 40 / 2.5        |
 | Large (lg)  | 48 / 3          |
 
 <div className="image--fixed">
@@ -84,3 +84,9 @@ plus the 16 px / 1rem on both sides of the text.
   Structure and spacing measurements for the default size content switcher | px
   / rem
 </Caption>
+
+<div className="image--fixed">
+
+![Alt text](images/content-switcher-style-size.png)
+
+</div>
