docs: Date picker size image update for V11

--- a/src/pages/components/date-picker/style.mdx
+++ b/src/pages/components/date-picker/style.mdx
@@ -186,3 +186,9 @@ select styling.
 </div>
 
 <Caption>Structure and spacing for a time picker | px / rem</Caption>
+
+<div className="image--fixed">
+
+![Sizes for date picker](images/date-picker-style-size.png)
+
+</div>
