docs: Dropdown size image update for V11

--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -227,3 +227,9 @@ can be applied to all variants of dropdown.
 </div>
 
 <Caption>Structure and spacing for inline dropdown | px / rem</Caption>
+
+<div className="image--fixed">
+
+![Sizes for dropdown](images/dropdown-style-size.png)
+
+</div>
