docs: File uploader size image update for V11

--- a/src/pages/components/file-uploader/style.mdx
+++ b/src/pages/components/file-uploader/style.mdx
@@ -128,12 +128,10 @@ The file and button heights should always match.
 |         | Medium (md) | 40 / 2.5        |
 |         | Large (lg)  | 48 / 3          |
 
-<Row>
-<Column colLg={8}>
+<div className="image--fixed">
 
-![File and button sizes](images/file-uploader-style-6.png)
+![Sizes for file uploader](images/file-uploader-style-size.png)
 
-</Column>
-</Row>
+</div>
 
 <Caption>File and button sizes | px / rem</Caption>
