docs: Search size image update for V11

--- a/src/pages/components/search/style.mdx
+++ b/src/pages/components/search/style.mdx
@@ -87,3 +87,9 @@ content.
 <Caption>
   Structure and spacing measurements for small search | px | rem
 </Caption>
+
+<div className="image--fixed">
+
+![Sizes for search](images/search-style-size.png)
+
+</div>
