docs: Select size image update for V11

--- a/src/pages/components/select/style.mdx
+++ b/src/pages/components/select/style.mdx
@@ -84,9 +84,7 @@ and any proper nouns capitalized. Select text should be three words or less.
 
 <div className="image--fixed">
 
-  
 ![Structure and spacing measurements for Inline Select](images/select-style-6.png)
-  
 
 </div>
 
@@ -95,8 +93,21 @@ and any proper nouns capitalized. Select text should be three words or less.
 </Caption>
 
 ## Size
-| Element              | Size                        | Height (px / rem)  |
-| -------------------- | --------------------------- | ------------------ | 
-| Input                | Small (sm)                  | 32 / 2             | 
-|                      | Medium (md)                 | 40 / 2.5           |
-|                      | Large (lg)                  | 48 / 3             |
+
+| Element | Size        | Height (px / rem) |
+| ------- | ----------- | ----------------- |
+| Input   | Small (sm)  | 32 / 2            |
+|         | Medium (md) | 40 / 2.5          |
+|         | Large (lg)  | 48 / 3            |
+
+<div className="image--fixed">
+
+![Sizes for select](images/select-style-default-size.png)
+
+</div>
+
+<div className="image--fixed">
+
+![Sizes for select](images/select-style-inline-size.png)
+
+</div>
