docs: Tag size image update for V11

--- a/src/pages/components/tag/style.mdx
+++ b/src/pages/components/tag/style.mdx
@@ -68,3 +68,9 @@ amount of content. All four corners of a tag are rounded with a 24px radius.
 </div>
 
 <Caption>Structure and spacing measurements for a tag | px / rem</Caption>
+
+<div className="image--fixed">
+
+![Sizes for tag](images/tag-style-size.png)
+
+</div>
