--- a/src/pages/components/text-input/style.mdx
+++ b/src/pages/components/text-input/style.mdx
@@ -106,3 +106,9 @@ should be three words or less.
 | Input   | Small (sm)  | 32 / 2            |
 |         | Medium (md) | 40 / 2.5          |
 |         | Large (lg)  | 48 / 3            |
+
+<div className="image--fixed">
+
+![Sizes for text input](images/text-input-style-size.png)
+
+</div>
