docs: Toggle size image update for V11

--- a/src/pages/components/toggle/style.mdx
+++ b/src/pages/components/toggle/style.mdx
@@ -86,3 +86,9 @@ phrase and any proper nouns capitalized, and no more than three words.
 <Caption>
   Structure and spacing measurements for small toggle | px / rem
 </Caption>
+
+<div className="image--fixed">
+
+![Sizes for toggle](images/toggle-style-size.png)
+
+</div>
