fix(code-snippet): fix accessbility duplicate header (#2334)
* testing

* fix(code-snippet): fix accessbility duplicate header

* Update usage.mdx

* fix: overflow content headers

Co-authored-by: Josefina Mancilla <josefinanoemi4@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/components/code-snippet/usage.mdx
+++ b/src/pages/components/code-snippet/usage.mdx
@@ -293,7 +293,7 @@ presented on one line.
 </Column>
 </Row>
 
-### Overflow content
+### Single line overflow content
 
 If the text in a single line code snippet is lengthy, the text overflows into a
 horizontal scroll.
@@ -318,7 +318,7 @@ Use multi-line code snippets for displaying multiple lines of code.
 </Column>
 </Row>
 
-### Overflow content
+### Multi-line overflow content
 
 #### Show more button
 
