--- a/src/pages/components/content-switcher/style.mdx
+++ b/src/pages/components/content-switcher/style.mdx
@@ -66,14 +66,6 @@ plus the 16 px / 1rem on both sides of the text.
 | `:after`                    | divider                     | 1px      | –             |
 | `.bx--content-switcher-btn` | padding-left, padding-right | 16 / 1   | `$spacing-05` |
 
-## Sizes
-
-| Size        | Height px / rem |
-| ----------- | --------------- |
-| Small (sm)  | 32 / 2          |
-| Medium (md) | 40 / 2.5        |
-| Large (lg)  | 48 / 3          |
-
 <div className="image--fixed">
 
 ![Content switcher structure and spacing measurements](images/content-switcher-style-1.png)
@@ -85,8 +77,18 @@ plus the 16 px / 1rem on both sides of the text.
   / rem
 </Caption>
 
+## Sizes
+
+| Size        | Height px / rem |
+| ----------- | --------------- |
+| Small (sm)  | 32 / 2          |
+| Medium (md) | 40 / 2.5        |
+| Large (lg)  | 48 / 3          |
+
 <div className="image--fixed">
 
-![Alt text](images/content-switcher-style-size.png)
+![Sizes for content switcher](images/content-switcher-style-size.png)
 
 </div>
+
+<Caption>Content switcher sizes | px / rem</Caption>
