Updated changes for size image of File uploader V11

--- a/src/pages/components/file-uploader/style.mdx
+++ b/src/pages/components/file-uploader/style.mdx
@@ -130,7 +130,7 @@ The file and button heights should always match.
 
 <div className="image--fixed">
 
-![Sizes for file uploader](images/file-uploader-style-size.png)
+![Sizes for file and button](images/file-uploader-style-size.png)
 
 </div>
 
