Updated changes for size image of Number input V11

--- a/src/pages/components/number-input/style.mdx
+++ b/src/pages/components/number-input/style.mdx
@@ -76,6 +76,16 @@ The add and subtract icons can be found in the
 | `.bx--number__controls`            | padding-left, padding-right | 16 / 1   | `$spacing-05` |
 | `.bx--number`                      | border-bottom               | 1px      | –             |
 
+<div className="image--fixed">
+
+![Structure and spacing for number input](images/number-input-style-1.png)
+
+</div>
+
+<Caption>
+  Structure and spacing measurements for a number input | px / rem
+</Caption>
+
 ## Sizes
 
 The height varies for each size variant and the the width varies based on
@@ -89,16 +99,8 @@ content, layout, and design.
 
 <div className="image--fixed">
 
-![Structure and spacing for number input](images/number-input-style-1.png)
-
-</div>
-
-<Caption>
-  Structure and spacing measurements for a number input | px / rem
-</Caption>
-
-<div className="image--fixed">
-
 ![Sizes for number input](images/number-input-style-size.png)
 
 </div>
+
+<Caption>Sizes for number input fields | px / rem</Caption>
