Updated changes for size image of Overflow menu V11

--- a/src/pages/components/overflow-menu/style.mdx
+++ b/src/pages/components/overflow-menu/style.mdx
@@ -80,3 +80,5 @@ menu. The overflow menu icon can be found in the
 ![Sizes for overflow menu](images/overflow-menu-style-size.png)
 
 </div>
+
+<Caption>Sizes for menu options and icon button | px / rem</Caption>
