Updated changes for size image of Search V11

--- a/src/pages/components/search/style.mdx
+++ b/src/pages/components/search/style.mdx
@@ -88,8 +88,18 @@ content.
   Structure and spacing measurements for small search | px | rem
 </Caption>
 
+## Sizes
+
+| Size        | Height px / rem |
+| ----------- | --------------- |
+| Small (sm)  | 32 / 2          |
+| Medium (md) | 40 / 2.5        |
+| Large (lg)  | 48 / 3          |
+
 <div className="image--fixed">
 
 ![Sizes for search](images/search-style-size.png)
 
 </div>
+
+<Caption>Search sizes | px / rem</Caption>
