Updated changes for size image of Select V11

--- a/src/pages/components/select/style.mdx
+++ b/src/pages/components/select/style.mdx
@@ -106,8 +106,12 @@ and any proper nouns capitalized. Select text should be three words or less.
 
 </div>
 
+<Caption>Sizes for default select | px / rem</Caption>
+
 <div className="image--fixed">
 
 ![Sizes for select](images/select-style-inline-size.png)
 
 </div>
+
+<Caption>Sizes for inline select | px / rem</Caption>
