Updated changes for size image of Tag V11

--- a/src/pages/components/tag/style.mdx
+++ b/src/pages/components/tag/style.mdx
@@ -69,8 +69,17 @@ amount of content. All four corners of a tag are rounded with a 24px radius.
 
 <Caption>Structure and spacing measurements for a tag | px / rem</Caption>
 
+## Sizes
+
+| Size        | Height px / rem |
+| ----------- | --------------- |
+| Small (sm)  | 16 / 1          |
+| Medium (md) | 24 / 1.5        |
+
 <div className="image--fixed">
 
 ![Sizes for tag](images/tag-style-size.png)
 
 </div>
+
+<Caption>Tag sizes | px / rem</Caption>
