Updated changes for size image of Text input V11

--- a/src/pages/components/text-input/style.mdx
+++ b/src/pages/components/text-input/style.mdx
@@ -112,3 +112,5 @@ should be three words or less.
 ![Sizes for text input](images/text-input-style-size.png)
 
 </div>
+
+<Caption>Text input sizes | px / rem</Caption>
